--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,47 @@
 version: "3.8"
 
 services:
-
-  postgres:
-    image: postgres
-    restart: always
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_NAME}
-    expose:
-      - '5432'
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./:/usr/src/app
+    working_dir: /usr/src/app
+    command: python -m app.webhook
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    networks:
+      - app-network
 
   bot:
     build:
       context: .
       dockerfile: Dockerfile
-    restart: always
+    volumes:
+      - ./:/usr/src/app
+    working_dir: /usr/src/app
+    command: python -m bot.bot
     env_file:
       - .env
+    networks:
+      - app-network
+
+  postgres:
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_NAME}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
 volumes:
   postgres-data:
+
+networks:
+  app-network:
+    driver: bridge
