--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,27 @@
 version: "3.8"
 
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_NAME}
+    expose:
+      - '5432'
     volumes:
-      - ./:/usr/src/app
-    working_dir: /usr/src/app
-    command: python -m app.webhook
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
-    networks:
-      - app-network
+      - postgres-data:/var/lib/postgresql/data
 
   bot:
     build:
       context: .
       dockerfile: Dockerfile
-    volumes:
-      - ./:/usr/src/app
-    working_dir: /usr/src/app
-    command: python -m bot.bot
+    restart: always
     env_file:
       - .env
-    networks:
-      - app-network
-
-  postgres:
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_NAME}
     volumes:
-      - postgres-data:/var/lib/postgresql/data
-    networks:
-      - app-network
+      - ./ultralytics:/root/.config/Ultralytics
 
 volumes:
   postgres-data:
-
-networks:
-  app-network:
-    driver: bridge
