--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,21 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-data/custom_engraving/
-data/paintings_metal/
-media_store.json
-secret/
-logs/
-zip/
+# Игнорируем файл хранения медиа
+bot/data/user/media_store.json
+
+# Игнорируем вложенные папки
+bot/data/user/secret/
+bot/data/user/logs/
+bot/data/user/zip/
+bot/data/user/excel/
+bot/data/user/qrcodes/
+bot/data/user/custom_engraving/
+bot/data/user/paintings_metal/
+bot/data/user/paintings_metal_steps/
+
+# Исключение — сохраняем .gitkeep
+!bot/data/user/.gitkeep
 
 # C extensions
 *.so
